--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/sakr2000">M.Sakr</a>.
     </div>
   </body>
 </html>
